--- a/templates/post.html
+++ b/templates/post.html
@@ -47,7 +47,7 @@
         <p>
           This blog was built with my own static site generator, it's a work in
           progress though. If that interests you, do have a look
-          <a href="/https://github.com/adamkadda/blog">here</a>.
+          <a href="https://github.com/adamkadda/blog">here</a>.
         </p>
         <p>© Adam Kadda</p>
       </footer>
