--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <main>
       <header>
         <a href="/" rel="home">blog.adamkadda.com</a>
-        <a href="adamkadda.com">about me</a>
+        <a href="https://adamkadda.com">about me</a>
       </header>
       <h1>I hope you like reading</h1>
       <table id="index">
