Set penguin as favicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <!-- styles -->
-    <link rel="icon" href="/static/img/favicon.ico" />
+    <link rel="icon" href="/static/img/penguin-neutral.svg" />
     <link rel="stylesheet" href="/static/css/clean.css" />
     <!-- script -->
     <script src="/static/js/filter.js" defer></script>
